--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+
+    <div class="container">
+        <div class="competitor" id="player">
+            <span>You</span>
+            <span class="score">0</span>
+        </div>
+
+        <div class="choice" id="rock">
+            Rock
+        </div>
+        <div class="choice" id="paper">
+            Paper
+        </div>
+        <div class="choice" id="scissors">
+            Scissors
+        </div>
+
+        <div class="competitor" id="player">
+            <span>You</span>
+            <span class="score">0</span>
+        </div>
+    </div>
+    <div class="rounds">
+        <span id="1"></span><span id="2"></span><span id="3"></span><span id="4"></span><span id="5"></span>
+    </div>
 </body>
 </html>
