--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -27,8 +28,8 @@
             Scissors
         </div>
 
-        <div class="competitor" id="player">
-            <span>You</span>
+        <div class="competitor" id="computer">
+            <span>Computer</span>
             <span class="score">0</span>
         </div>
     </div>
