Fix round id attributes for js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="rounds">
-        <span id="1"></span><span id="2"></span><span id="3"></span><span id="4"></span><span id="5"></span>
+        <span id="one"></span><span id="two"></span><span id="three"></span><span id="four"></span><span id="five"></span>
     </div>
     <script src="script.js"></script>
 </body>
